[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "production_planning"
authors = [
    {name = "Your Company", email = "info@yourcompany.com"}
]
description = "Production Planning and Queuing System for Manufacturing Units"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    "frappe~=15.0"
]

[project.urls]
Home = "https://github.com/Dharshantfs/production_planning"

[tool.bench.dev-dependencies]

